some spacing and `gap` issues solved

--- a/src/components/Header/search.module.css
+++ b/src/components/Header/search.module.css
@@ -17,10 +17,27 @@
 .list__container {
   composes: flex from "../../general.module.css";
   flex-flow: row wrap;
-  gap: 1rem;
-
   width: 100%;
   justify-content: space-around;
+}
+
+.list__container > * {
+  margin: 0.25rem;
+}
+
+@media (max-width: 400px) {
+  .list__container {
+    justify-content: center;
+  }
+
+  .list__container > * {
+    width: 100%;
+    text-align: center;
+  }
+
+  .list__container > *:last-child > * {
+    margin: 1.5rem auto 0;
+  }
 }
 
 .item {
@@ -35,9 +52,9 @@
 
 .text,
 input::placeholder {
+  font-size: 13px;
   color: col2;
   cursor: pointer;
-  font-size: 13px;
 }
 
 .btn {
