--- a/src/components/MainHome/mainhome.module.css
+++ b/src/components/MainHome/mainhome.module.css
@@ -2,8 +2,10 @@
   composes: container flex from "../../general.module.css";
   max-width: calc(1024px + 64px);
   flex-flow: column wrap;
-  gap: 2rem;
-  padding-inline: 32px;
-  padding-block-start: 5rem;
-  padding-block-end: 3.5rem;
+  padding: 5rem 2rem 3.5rem;
+}
+
+.container > * {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
